@@ -163,7 +163,7 @@ The type of \code{Ellipsis}.
 
 \begin{datadesc}{TracebackType}
 The type of traceback objects such as found in
-\code{sys.exc_traceback}.
+\code{sys.exc_info()[2]}.
 \end{datadesc}
 
 \begin{datadesc}{FrameType}
