@@ -163,6 +163,7 @@ Extension Modules
 
 - Removed these attributes from Python modules:
   * operator module: div, idiv, __div__, __idiv__, isCallable, sequenceIncludes
+  * sys module: exc_type, exc_value, exc_traceback
 
 
 Library
